tests/baselines/reference/es5-asyncFunctionWithStatements(strict=true).errors.txt
es5-asyncFunctionWithStatements.ts(1,13): error TS7005: Variable 'x' implicitly has an 'any' type.
es5-asyncFunctionWithStatements.ts(1,16): error TS7005: Variable 'y' implicitly has an 'any' type.
es5-asyncFunctionWithStatements.ts(1,19): error TS7005: Variable 'z' implicitly has an 'any' type.
es5-asyncFunctionWithStatements.ts(1,22): error TS7005: Variable 'a' implicitly has an 'any' type.
es5-asyncFunctionWithStatements.ts(1,25): error TS7005: Variable 'b' implicitly has an 'any' type.
es5-asyncFunctionWithStatements.ts(1,28): error TS7005: Variable 'c' implicitly has an 'any' type.
es5-asyncFunctionWithStatements.ts(4,5): error TS1101: 'with' statements are not allowed in strict mode.
es5-asyncFunctionWithStatements.ts(4,5): error TS1300: 'with' statements are not allowed in an async function block.
es5-asyncFunctionWithStatements.ts(4,5): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
es5-asyncFunctionWithStatements.ts(10,5): error TS1101: 'with' statements are not allowed in strict mode.
es5-asyncFunctionWithStatements.ts(10,5): error TS1300: 'with' statements are not allowed in an async function block.
es5-asyncFunctionWithStatements.ts(10,5): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
es5-asyncFunctionWithStatements.ts(16,5): error TS1101: 'with' statements are not allowed in strict mode.
es5-asyncFunctionWithStatements.ts(16,5): error TS1300: 'with' statements are not allowed in an async function block.
es5-asyncFunctionWithStatements.ts(16,5): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
es5-asyncFunctionWithStatements.ts(24,5): error TS1101: 'with' statements are not allowed in strict mode.
es5-asyncFunctionWithStatements.ts(24,5): error TS1300: 'with' statements are not allowed in an async function block.
es5-asyncFunctionWithStatements.ts(24,5): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
es5-asyncFunctionWithStatements.ts(25,9): error TS1101: 'with' statements are not allowed in strict mode.


==== es5-asyncFunctionWithStatements.ts (19 errors) ====
    declare var x, y, z, a, b, c;
                ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                   ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                      ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
                         ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
                            ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
                               ~
!!! error TS7005: Variable 'c' implicitly has an 'any' type.
    
    async function withStatement0() {
        with (x) {
        ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
        ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
            y;
        }
    }
    
    async function withStatement1() {
        with (await x) {
        ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
        ~~~~~~~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
            y;
        }
    }
    
    async function withStatement2() {
        with (x) {
        ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
        ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
            a;
            await y;
            b;
        }
    }
    
    async function withStatement3() {
        with (x) {
        ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
        ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
            with (z) {
            ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
                a;
                await y;
                b;
            }
        }
    }